--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "Yet another voting page but tiny",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "^14"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
